<resources>
    <string name="app_name">三香九</string>
    <string name="account">账号</string>
    <string name="account_hint">请输入手机号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_type_1">使用手机+密码的方式登录</string>
    <string name="login_type_2">使用手机+验证码的方式登录</string>
    <string name="tv_login">登录</string>
    <string name="phone">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password2">确认密码</string>
    <string name="password_hint2">请确认密码</string>
    <string name="confirm">确定</string>
    <string name="tv_confirm">确认</string>
    <string name="home_tab_1">首页</string>
    <string name="home_tab_2">分享</string>
    <string name="home_tab_3">购物车</string>
    <string name="home_tab_4">我的</string>
    <string name="search_hint">搜索想要的商品</string>
    <string name="hot_activity">会员专享</string>
    <string name="hot_classify">热门分类</string>
    <string name="all_classify">全部分类</string>
    <string name="classify">所有分类</string>
    <string name="recommend">美白推荐</string>
    <string name="sort_type1">价格</string>
    <string name="sort_type2">销量</string>
    <string name="introduce">产品介绍</string>
    <string name="loading">加载中…</string>
    <string name="hadSale">人购买</string>
    <string name="moreClassify">更多</string>
    <string name="service">客服</string>
    <string name="collection">收藏</string>
    <string name="addCar">加购物车</string>
    <string name="purchase">立即购买</string>
    <string name="buyCount">购买数量</string>
    <string name="shouldPay">应付金额：</string>
    <string name="submitOrder">提交订单</string>
    <string name="goodsPay">商品金额</string>
    <string name="goodsPay_buzhu">商品补助</string>
    <string name="carriage">运费</string>
    <string name="carriage_buzhu">运费/保险补助</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="tv_choices">全选</string>
    <string name="goto_pay">去结算</string>
    <string name="delete">删除</string>
    <string name="sum">合计：</string>
    <string name="sumPay">共计金额：</string>
    <string name="myShare">我的分享</string>
    <string name="shareHint">邀请好友一起加入、享受购物的同时、将获得丰厚的奖励（分享次数不足将无法获得奖励、购买指定产品可获得分享次数）</string>
    <string name="myCode">我的邀请码：</string>
    <string name="leftCode">剩余邀请次数</string>
    <string name="shareNow">立即分享</string>
    <string name="buyNum">购买次数</string>
    <string name="share1">FaceBook</string>
    <string name="share2">Twitter</string>
    <string name="share3">微信</string>
    <string name="share4">Instagram</string>
    <string name="share5">Google+</string>
    <string name="share6">YouTube</string>
    <string name="confirmOrder">确认订单</string>
    <string name="choice_pay">请选择支付方式</string>
    <string name="visa">VISA</string>
    <string name="confirmPay">确认支付</string>
    <string name="pay">付款</string>
    <string name="video_play">视频播放</string>
    <string name="complete_pay">支付已完成</string>
    <string name="success_pay">支付完成</string>
    <string name="phone_code">手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd2">新密码</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="confirm_pwd2">确认新密码</string>
    <string name="invite_code">邀请码</string>
    <string name="tv_retry">重试</string>
    <string name="tv_resend">重新发送</string>
    <string name="tv_code">验证码</string>
    <string name="tv_login_pwd">登录密码</string>
    <string name="msg_code_login">短信验证码登录</string>
    <string name="tv_pwd_login">账号密码登录</string>
    <string name="my_order">我的订单</string>
    <string name="check_more_order">查看更多订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_team">我的团队</string>
    <string name="my_collect">我的收藏</string>
    <string name="tv_issue">常见问题</string>
    <string name="call_serivce">联系客服</string>
    <string name="wait_pay">待付款</string>
    <string name="tv_wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="tv_wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="tv_wait_receive">待收货</string>
    <string name="tv_complete">已完成</string>
    <string name="set_login_pwd">修改/设置登录密码</string>
    <string name="set_deal_pwd">修改/设置交易密码</string>
    <string name="address_manager">地址管理</string>
    <string name="tv_idea">意见反馈</string>
    <string name="about_me">关于我们</string>
    <string name="cut_account">切换账号</string>
    <string name="log_out">退出登录</string>
    <string name="tv_setting">设置</string>
    <string name="view_error">加载出错,点击尝试从新加载</string>
    <string name="manager_address">地址管理</string>
    <string name="tv_def">默认</string>
    <string name="add_new_address">添加新地址</string>
    <string name="tv_receiver">收货人</string>
    <string name="receiver_phone">收货电话</string>
    <string name="receiver_address">收货地址</string>
    <string name="selector_address">请选择收货地址</string>
    <string name="tv_save">保存</string>
    <string name="add_address">新增收货地址</string>
    <string name="compile_address">编辑收货地址</string>
    <string name="def_address">默认地址</string>
    <string name="hint_exit">再按一次退出美白商城</string>
    <string name="network_error">网络不给力，请检查网络设置</string>
    <string name="shoppe_price">商品价</string>
    <string name="fqa_answer">问题解答</string>
    <string name="network_service">网络客服</string>
    <string name="call_phone">拨打电话</string>
    <string name="tv_service">客服</string>
    <string name="tv_year_bonus">直推奖(RMB)</string>
    <string name="tv_quarter_bonus">组织奖(RMB)</string>
    <string name="tv_organization_bonus">重复消费奖(RMB)</string>
    <string name="today_earnings">今日收益(RMB)</string>
    <string name="tv_total_price">总金额</string>
    <string name="today_earnings_detials">今日收益详情</string>
    <string name="yesterday_earnings_details">昨日收益详情</string>
    <string name="accumulate_earnings_details">累计收益详情</string>
    <string name="award_1">直推奖励</string>
    <string name="award_2">组织奖励</string>
    <string name="award_3">重复消费奖励</string>
    <string name="year_earnings">年度收益详情</string>
    <string name="quarter_earnings">季度收益详情</string>
    <string name="withdraw_list">提现列表</string>
    <string name="organization_earnings_detials">收益详情</string>
    <string name="transfer_accounts_pathway">转账途径</string>
    <string name="select_pathway">请选择转账途径</string>
    <string name="ed_code">请输入账号</string>
    <string name="withdraw_title">提现金额 (RMB)</string>
    <string name="ed_money">请输入提现金额</string>
    <string name="can_withdraw_money">可提余额 : </string>
    <string name="all_withdraw">全部提现</string>
    <string name="confirm_withdraw">确认提现</string>
    <string name="earnings_withdraw">收益提现</string>
    <string name="withdraw_details">提现明细</string>
    <string name="select_withdraw_model">请选择提现方法</string>
    <string name="withdraw_complete_details">您的提现申请已提交,具体以到账时间为准</string>
    <string name="withdraw_complete">提现完成</string>
    <string name="tv_avatar">头像</string>
    <string name="tv_naickname">昵称</string>
    <string name="tv_sex">性别</string>
    <string name="personal_info">个人信息</string>
    <string name="select_image_src">选择图片来源</string>
    <string name="photo_album">相册</string>
    <string name="tv_camera">相机</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_avater_detials">拒绝给予权限会导致相关功能不可用</string>
    <string name="select_sex">请选择性别</string>
    <string name="tv_man">男</string>
    <string name="tv_women">女</string>
    <string name="tv_secrecy">保密</string>
    <string name="tv_input_nickname">请输入昵称</string>
    <string name="alter_nickname">设置昵称</string>
    <string name="login_pwd">登录密码</string>
    <string name="del_pwd">交易密码</string>
    <string name="tv_feed_details">感谢您提出的宝贵意见</string>
    <string name="tv_submit">提交</string>
    <string name="tv_feedback">意见反馈</string>
    <string name="tv_about">180°C</string>
    <string name="tv_call_phone">拨打</string>
    <string name="tv_my_order">我的订单</string>
    <string name="relationMember">直属成员</string>
    <string name="organizationMember">组织成员</string>
    <string name="all_vip">全部成员</string>
    <string name="relation_vip">直属成员</string>
    <string name="organization_vip">组织成员</string>
    <string name="vip_detail">会员详情</string>
    <string name="person">人</string>
    <string name="all_order">全部</string>
    <string name="wait_evaluate">待评价</string>
    <string name="tv_completed">已完成</string>
    <string name="wait_buy_pay">等待买家付款</string>
    <string name="tv_btn_pay">付款</string>
    <string name="tv_btn_comment">评价</string>
    <string name="tv_btn_comment_list">评价列表</string>
    <string name="tv_goods_comment">请输入对商品的评价</string>
    <string name="tv_Rating">商品评分</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_canceled">%s后订单将自动取消</string>
    <string name="tv_total">共</string>
    <string name="total_price">  合计:  RMB</string>
    <string name="tv_freight">  (含运费RM</string>
    <string name="tv_seller_send">等待卖家发货</string>
    <string name="wait_buyer_receive">等待买家收货</string>
    <string name="delete_order">删除订单</string>
    <string name="del_cancel">交易取消</string>
    <string name="goods_total_price">商品总价</string>
    <string name="goods_details">商品详情</string>
    <string name="tv_freight22">运费</string>
    <string name="order_total_price">订单总价</string>
    <string name="true_pay">实付款</string>
    <string name="tv_order_code">订单编号:   </string>
    <string name="create_time">创建时间:</string>
    <string name="logistics_order_code">物流单号:</string>
    <string name="tv_canceled">已取消</string>
    <string name="confirm_receive">确认收货</string>
    <string name="tv_order_details">订单详情</string>
    <string name="input_account">请输入账号</string>
    <string name="input_withdraw_price">请输入提现金额</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_login_pwd">请输入登录密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_confirm_pwd">请输入确认密码</string>
    <string name="two_pwd_err">两次密码不一致</string>
    <string name="confirm_log_out">是否确定退出登录?</string>
    <string name="input_receive_name">请输入姓名</string>
    <string name="input_receive_address">请输入地址</string>
    <string name="yesterday_earnings">昨日收益</string>
    <string name="accumulated_income">累计收益</string>
    <string name="input_pay_pwd">请输入支付密码</string>
    <string name="car_is_empty">购物车为空</string>
    <string name="no_data">暂无数据</string>
    <string name="people_buy">人购买</string>
    <string name="read_failure">读取照片失败，请重新再试</string>
    <string name="pwd_min">密码不能少于6位</string>
    <string name="about_app">一个帮助你学习、成长和一起创造财富的平台</string>
    <string name="tv_refunding">退款中</string>
    <string name="tv_refunded">已退款</string>
    <string name="Bank_Name">开户银行:</string>
    <string name="Account_Name">持卡人:</string>
    <string name="Account_No">卡号:</string>
    <string name="Country_Area">国家/地区</string>
    <string name="Please_key_in_Bank_Name">请输入开户银行</string>
    <string name="Please_key_in_Account_Name">请输入持卡人姓名</string>
    <string name="Please_key_in_Account_No">请输入银行卡号</string>
    <string name="Malaysia">马来西亚</string>
    <string name="China">中国大陆</string>
    <string name="Passport">护照</string>
    <string name="Id_Card">身份证</string>
    <string name="Document_Type">证件类型</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_document_code">请输入证件号</string>
    <string name="tv_name">姓名</string>
    <string name="tv_document_code">证件号</string>
    <string name="confirm_name">姓名</string>
    <string name="confirm_phone">电话号码</string>
    <string name="confirm_submit">确定</string>
    <string name="confirm_choice">选择提货地址</string>
    <string name="tv_dialog_title">重要提醒</string>
    <string name="tv_dialog_content">请妥善保管您的交易密码</string>
</resources>