<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="20dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/home_tab_2"
        android:textColor="@color/colorText"
        android:textSize="@dimen/h5" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:src="@mipmap/home_btn_delete" />

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_close"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/share_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/facebook"
            android:gravity="center"
            android:text="@string/share1"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/share_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/twitter"
            android:gravity="center"
            android:text="@string/share2"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/share_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/wechat"
            android:gravity="center"
            android:text="@string/share3"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_share"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/share_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/instagram"
            android:gravity="center"
            android:text="@string/share4"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/share_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/google"
            android:gravity="center"
            android:text="@string/share5"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/share_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/youtube"
            android:gravity="center"
            android:text="@string/share6"
            android:textColor="@color/colorText"
            android:textSize="@dimen/h5" />
    </LinearLayout>

</RelativeLayout>