<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/bg_round_white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:text="@string/tv_dialog_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_12"
            android:text="@string/tv_dialog_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="@dimen/sp_14"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:text="@string/tv_confirm"/>
    </LinearLayout>


</LinearLayout>