<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include layout="@layout/item_toolbar"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_pathway"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/transfer_accounts_pathway"/>
                <TextView
                    android:id="@+id/tv_pay_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/select_pathway"/>
            </LinearLayout>
            <EditText
                android:id="@+id/ed_account"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ed_code"
                android:textSize="14sp"
                android:textColor="@color/colorText"
                android:gravity="center_vertical"
                android:paddingLeft="80dp"
                android:paddingRight="10dp"
                android:maxLines="1"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_14"
                android:gravity="center_vertical"
                android:text="@string/withdraw_title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:text="RMB"/>
                <EditText
                    android:id="@+id/ed_money"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="numberDecimal"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:maxLines="1"
                    android:hint="@string/ed_money"
                    android:textSize="18sp"
                    android:textColor="@color/colorText"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/can_withdraw_money"/>
                <TextView
                    android:id="@+id/tv_all_withdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/all_withdraw"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_confirm_withdraw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/select_red_gray_btn_bg_r1000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:text="@string/confirm_withdraw"/>
</LinearLayout>