<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colorText"
        android:layout_marginTop="20dp"
        android:text="@string/select_image_src"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <TextView
            android:id="@+id/tv_picture"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/photo_album"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <TextView
            android:id="@+id/tv_camera"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tv_camera"
            android:textSize="@dimen/sp_16"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <TextView
            android:id="@+id/tv_cancel"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_16"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tv_cancel"/>
    </android.support.v7.widget.CardView>




</LinearLayout>
