<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#602d2c2c"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:text="@string/select_sex"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <TextView
                android:id="@+id/tv_man"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/tv_man"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <TextView
                android:id="@+id/tv_woman"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/tv_women"
                android:textSize="@dimen/sp_16"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <TextView
                android:id="@+id/tv_secrecy"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/tv_secrecy"
                android:textSize="@dimen/sp_16"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <TextView
                android:id="@+id/tv_cancel"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_16"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/tv_cancel"/>
        </android.support.v7.widget.CardView>


    </LinearLayout>



</RelativeLayout>
